@@ -1,3 +1,6 @@
+[B]Version 1.2.6[/B]
+    * Fixed problems with nightly version of JDownloader
+
 [B]Version 1.2.5[/B]
     * Added new actions to user interface: 'Enable/Disable reconnect', 'Enable/Disable premium'
     * Added new action to plugin interface: 'Reconnect'
